# MangoDictionary

./: CMakeLists.txt  README.md  demo.c  demo1.c  demo_dialog.c
MangoDic/data/: CMakeLists.txt  btCreateFromTxt.c  short_demo.txt
MangoDic/data/b/: btCreateFromTxt
MangoDic/mango/: README.TXT  data.txt  giao_dien.c  giao_dien.h  init.c  init.h  main.c  main.h  main1.glade  run  string_deal.c  string_deal.h  xu_ly_btree.c  xu_ly_btree.h
MangoDic/mango/GUI/: main4.glade  main5.glade
MangoDic/mango/libs/btree/: bigt  bigtdel  bt  btr  kcp
MangoDic/mango/libs/btree/inc/: bc.h
